--- a/lastscores.html
+++ b/lastscores.html
@@ -25,10 +25,10 @@
       <h1 id='title'>Scores</h1>
       <table id='scores' class="table">
           <thead>
-              <th>name</th>
-              <th>score</th>
-              <th>ice cream</th>
-              <th>destroyed</th>
+              <th>Player Name</th>
+              <th>Score</th>
+              <th>Ice cream</th>
+              <th>Destroyed</th>
           </thead>
       </table>
       <div class="btn btn-default total">Total Ice Cream <span id='totalIceCream'></span></div>
